# glium-obj

./: Cargo.toml  Readme.md
shapes/: airboat.mtl  litter.blend  litter.mtl
src/: hud.rs  main.rs  model.rs  teapot.vertex.glsl  view.rs
